@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 f480d066fb0f1ef85f7612167fdee2197b4f98dd ChangeLog
+SHA1 2ea9ccf972d1220e899c07c7cf54df75233714ac ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 117f76b323ea83d07aca41946604621d1b0d78a2 META.yml
-SHA1 39fa740fd3961442df0f2d76d4c4f526be288a46 MYMETA.json
-SHA1 9dd151d6b20e8356c6e9754c52b6a6c1db6d827d MYMETA.yml
-SHA1 e9524ad3b6567ef5a55201b2db8bae5abc6b493d Makefile.PL
+SHA1 42228647ab8067cb6fadb11ddf4c6a824a302bf8 META.yml
+SHA1 cf37dd6fc52a7a3b02bbb82681598af9b024a427 MYMETA.json
+SHA1 3f45d13028c30c341985da5ae510308eedb45b17 MYMETA.yml
+SHA1 31a0bac47333605810d88fd41cfe6d5a980d3d9f Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 f1dd82c16fc6894c7949d64c481782cfed7a59b0 install_mozrepl_plugin.ahk
-SHA1 84cf495f9124040069484225cb839388436dec3f lib/Net/FullAuto.pm
+SHA1 cf6a85baf618ef276c4cf4820fce7bbbe08027b0 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDo+ycACgkQJM3IZYB6aOqTDQCfbV/LTu/IgBKXHZgYTHpREzh5
-NWoAn1MOYrYULs2nwK34qXy8vY1publM
-=6n+F
+iEYEARECAAYFAlDpnxUACgkQJM3IZYB6aOqgBwCgmtwhB2KTqE4/P22TluH+ofb1
+lLMAmwRvnh6aPzkJg0k1iZuz+Rb3tqbL
+=F8z6
 -----END PGP SIGNATURE-----
